# RiskyDice

./: .gitignore  CMakeLists.txt  README.md  compile.sh
src/: CMakeLists.txt  Dice.cc
